@@ -333,22 +333,22 @@ def BuildDefaultGlobals():
     globals['Local']             = Local
     globals['Object']            = SCons.Defaults.StaticObject
     globals['Options']           = Options
-    globals['Repository']        = SCons.Node.FS.default_fs.Repository
-    globals['SetBuildSignatureType'] = SetBuildSignatureType
-    globals['SetContentSignatureType'] = SetContentSignatureType
-    globals['StaticLibrary']     = SCons.Defaults.StaticLibrary
-    globals['StaticObject']      = SCons.Defaults.StaticObject
-    globals['SharedLibrary']     = SCons.Defaults.SharedLibrary
-    globals['SharedObject']      = SCons.Defaults.SharedObject
     globals['ParseConfig']       = SCons.Util.ParseConfig
     globals['Platform']          = SCons.Platform.Platform
     globals['Program']           = SCons.Defaults.Program
+    globals['Repository']        = SCons.Node.FS.default_fs.Repository
     globals['Return']            = Return
-    globals['Scanner']           = SCons.Scanner.Base
     globals['SConscript']        = SConscript
     globals['SConscriptChdir']   = SConscriptChdir
+    globals['Scanner']           = SCons.Scanner.Base
+    globals['SetBuildSignatureType'] = SetBuildSignatureType
     globals['SetCommandHandler'] = SCons.Action.SetCommandHandler
+    globals['SetContentSignatureType'] = SetContentSignatureType
+    globals['SharedLibrary']     = SCons.Defaults.SharedLibrary
+    globals['SharedObject']      = SCons.Defaults.SharedObject
     globals['Split']             = SCons.Util.Split
+    globals['StaticLibrary']     = SCons.Defaults.StaticLibrary
+    globals['StaticObject']      = SCons.Defaults.StaticObject
     globals['Tool']              = SCons.Tool.Tool
     globals['WhereIs']           = SCons.Util.WhereIs
     return globals
